@@ -1235,8 +1235,8 @@ For complete control over display options use raw HTML.</p>
 <h1><a class="toc-backref" href="#id80"><span class="sectnum">3</span> Changes to the html4css1 writer</a></h1>
 <ul class="simple">
 <li><p>Use only meta keywords recognized by HTML 5.</p></li>
-<li><p>Style table column widths with CSS rule, not &quot;width&quot; argument.</p></li>
-<li><p>Vertical alignment of table heads with CSS.</p></li>
+<li><p>Set table column widths with &lt;style=&quot;width: ...&quot;&gt;, not &quot;width&quot; argument.</p></li>
+<li><p>Horizontal alignment of table heads with CSS.</p></li>
 <li><p>Field lists as styled definition lists.</p></li>
 <li><p>Do not drop paragraph objects, use CSS rules to prevent unwanted vertical
 space.</p></li>
@@ -1377,7 +1377,8 @@ body is wrapped and aligns with other fields.</p>
 <p>The following styles can be applied to individual tables via a class
 argument or as document wide setting with the <a class="reference external" href="http://docutils.sourceforge.net/docs/user/config.html#table-style">table-style</a> <a class="footnote-reference brackets" href="#id31" id="id32">7</a> configuration
 setting (or command line argument).</p>
-<p>Numbered tables can be achieved with the &quot;numbered&quot; class option</p>
+<ul>
+<li><p>Numbered tables can be achieved with the &quot;numbered&quot; class option:</p>
 <table class="numbered">
 <caption>truth values</caption>
 <colgroup>
@@ -1412,14 +1413,10 @@ setting (or command line argument).</p>
 </table>
 <p>Currently, referencing to the table by number is not supported. This is a
 common request and already on the <cite>TODO list</cite>.</p>
-<p>A table with &quot;booktabs&quot; class argument, is rendered similar to the style
-from the <a class="reference external" href="http://tug.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf">booktabs</a> <a class="footnote-reference brackets" href="#id33" id="id34">8</a> LaTeX package.</p>
-<table class="booktabs">
-<colgroup>
-<col style="width: 29%" />
-<col style="width: 29%" />
-<col style="width: 41%" />
-</colgroup>
+</li>
+<li><p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
+column widths are determined by the browser.</p>
+<table class="colwidths-auto">
 <thead>
 <tr><th class="head"><p>A</p></th>
 <th class="head"><p>B</p></th>
@@ -1445,16 +1442,17 @@ from the <a class="reference external" href="http://tug.ctan.org/tex-archive/mac
 </tr>
 </tbody>
 </table>
-<p>&quot;Booktabs&quot; style table, numbered and centre-aligned:</p>
-<table class="numbered booktabs align-center">
+</li>
+<li><p>A table with &quot;booktabs&quot; class value, is rendered similar to the style
+from the <a class="reference external" href="http://tug.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf">booktabs</a> <a class="footnote-reference brackets" href="#id33" id="id34">8</a> LaTeX package.</p>
+</li>
+</ul>
+<p>&quot;Booktabs&quot; style table, numbered, centre-aligned, with auto-sized columns:</p>
+<blockquote>
+<table class="booktabs numbered colwidths-auto align-center">
 <caption>I/O values</caption>
-<colgroup>
-<col style="width: 31%" />
-<col style="width: 31%" />
-<col style="width: 38%" />
-</colgroup>
 <thead>
-<tr><th class="head" colspan="2"><p>Inputs</p></th>
+<tr><th class="head" colspan="2"><p>Input</p></th>
 <th class="head"><p>Output</p></th>
 </tr>
 <tr><th class="head"><p>A</p></th>
@@ -1481,6 +1479,7 @@ from the <a class="reference external" href="http://tug.ctan.org/tex-archive/mac
 </tr>
 </tbody>
 </table>
+</blockquote>
 </div>
 </div>
 </div>
